--- a/app/src/main/res/layout/activity_create_user.xml
+++ b/app/src/main/res/layout/activity_create_user.xml
@@ -101,7 +101,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
         android:background="@color/colorPrimary"
-        android:onClick="creatUserClicked"
+        android:onClick="createUserClicked"
         android:text="Create User"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
